--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,3 +66,23 @@ nav a.current, nav a:hover{
   background: #83cd29;
   color: #000;
 }
+
+.meta{
+  padding: 7px;
+  border: 1px solid #ccc;
+  background: #ccc;  
+}
+
+a.more{
+  display: block;
+  width: 80px;
+  margin-top: 20px;
+  background: #404137;
+  color: #fff;
+  padding: 10px;
+}
+
+.post{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 20px;
+}
